fixes some problems on small screens

--- a/src/web/src/components/DiceArea/dice-area.css
+++ b/src/web/src/components/DiceArea/dice-area.css
@@ -7,6 +7,7 @@
   height: 30%;
   width: 100%;
   position: relative;
+  overflow: hidden;
 }
 
 .dice-span {
