--- a/src/web/src/index.css
+++ b/src/web/src/index.css
@@ -52,8 +52,8 @@ body {
 
 #scroll {
   position: absolute;
-  height: 100%;
   width: 100%;
+  /*height: 100%;*/
   overflow: hidden;
 }
 
